Fix(Styling): Fixed styling of item quantity not wrapped in next line in OrderTotals component in mobile design

--- a/src/pages/Checkout/OrderDetails/OrderDetails.scss
+++ b/src/pages/Checkout/OrderDetails/OrderDetails.scss
@@ -29,6 +29,7 @@
 
 .order-totals__name-quantity-container {
   @include flexVCenter;
+  flex-wrap: wrap;
 }
 
 .order-totals__quantity {
